--- a/tests/fonts.tex
+++ b/tests/fonts.tex
@@ -18,7 +18,8 @@
 %\AsanaFonts
 %\CormorantFonts
 %\EBGaramondFonts
-\ErewhonFonts
+%\ErewhonFonts
+\FiraFonts
 %\LibertinusFonts
 %\BonumFonts
 %\PagellaFonts
