--- a/tests/fonts.tex
+++ b/tests/fonts.tex
@@ -14,12 +14,12 @@
 \documentclass{PalisadesLakesArticle}
 \geomHDTV
 \geomLandscape
-
 %\AsanaFonts
-%\CormorantFonts
+\CormorantFonts
 %\EBGaramondFonts
 %\ErewhonFonts
-\FiraFonts
+%\FiraFonts
+%\GFSNeohellenicFonts
 %\LibertinusFonts
 %\BonumFonts
 %\PagellaFonts
