--- a/tests/math.tex
+++ b/tests/math.tex
@@ -16,10 +16,11 @@
 \geomLandscape
 
 %\AsanaFonts
-%\CormorantFonts
+\CormorantFonts
 %\EBGaramondFonts
 %\ErewhonFonts
-\FiraFonts
+%\FiraFonts
+%\GFSNeohellenicFonts
 %\LibertinusFonts
 %\BonumFonts
 %\PagellaFonts
