--- a/shared/averaging.tex
+++ b/shared/averaging.tex
@@ -28,7 +28,7 @@ f(\Set{M}(\Vector{T},\Vector{w})) = \sum_{k=0}^{p-1} \| \Vector{d}_k - \Projecti
 \end{equation}
 over a family of registration transforms $\left\{\Vector{T}\right\}$
 and vectors of weights $\Vector{w} \in \Reals^n$.
-The vertex positions $\Vector{p}(\Vector{T},\Vector{w}) = (\Vector{p}_0(\Vector{T},\Vector{w}), \ldots , \Vector{p}_{n-1}(\Vector{T},\Vector{w}))$
+The vertex positions $\Vector{p}(\Vector{T},\Vector{w}) = (\Vector{p}_0(\Vector{T},\Vector{w}) \ldots  \Vector{p}_{n-1}(\Vector{T},\Vector{w}))$
 of the registered average mesh, $\Set{M}(\Vector{T},\Vector{w})$, are given by:
 \begin{equation}
 \Vector{p}_i(\Vector{T},\Vector{w}) = \Vector{T} ( \sum_{j=0}^{n-1} w_j \Vector{p}_{ij} )
