--- a/shared/barycentric-coordinates.tex
+++ b/shared/barycentric-coordinates.tex
@@ -9,12 +9,12 @@ a finite dimensional inner product space $\Space{V}$
 and the derivatives with respect to the vertex positions.
 
 Let $\Simplex{S}$ be the geometric $n$-simplex
-with vertex positions $\left\{\Point{p}_0 , \ldots , \Point{p}_n\right\}$;
+with vertex positions $\left\{\Point{p}_0  \ldots  \Point{p}_n\right\}$;
 in $\Space{V}$.
 
 The {\it span} of $\Simplex{S}$, $\affinespan ( S )$,
 is the affine span of its vertex positions
-$\affinespan \left\{\Point{p}_0 , \ldots , \Point{p}_n\right\}$,
+$\affinespan \left\{\Point{p}_0  \ldots  \Point{p}_n\right\}$,
 that is, the set of points $\Point{q}$ such that
 $\Point{q} = \sum_{j=n}^{m} b_j \Point{p}_j $ 
 where $1 = \sum_{j=0}^{n} b_j $.
