--- a/shared/cartesian-products.tex
+++ b/shared/cartesian-products.tex
@@ -83,7 +83,7 @@ Does this imply functional relations $f_i$ on
 $\Set{X} \times \Set{Y}_i$?
 How about $f_i = e_i \circ f$,
 where $e_i : \times_j \Set{X}_j  \rightarrow \Set{X}_i$ by
-$e_i \left( [x_0, x_1, \ldots , x_{n-1} \right) = x_i$ 
+$e_i \left( [x_0, x_1 \ldots  x_{n-1} \right) = x_i$ 
 
 % \end{figure}
 \end{plSection}%{Cartesion product functions}
