--- a/shared/derivatives.tex
+++ b/shared/derivatives.tex
@@ -815,7 +815,7 @@ $\Gradient{\| \Vector{f} \|^2}[\Vector{v}]
 Let $\text{volume} : \times^{n} \Space{R} \mapsto \Space{R}$ 
 be defined as
 \begin{equation}
-\text{volume} \left( x_0 , \ldots , x_{n-1} \right) = \prod_{i=0}^{n-1} x_i
+\text{volume} \left( x_0  \ldots  x_{n-1} \right) = \prod_{i=0}^{n-1} x_i
 \end{equation}
 This is multilinear as a functional on $\times^{n} \Space{R}$.
 
