--- a/shared/flatten.tex
+++ b/shared/flatten.tex
@@ -14,11 +14,11 @@ has exactly two triangulations denoted $T_{\Set{Z}^+}$ and $T_{\Set{Z}^-}$.
 
 See \citeAuthorYearTitle[Lemma~1.1.2]{Rambau:1996:PolytopeProjection}.
 
-Let $S=(\Point{p}_0, \Point{p}_1, \ldots , \Point{p}_m)$ be an $m$-simplex in $\Reals^{n}$.
+Let $S=(\Point{p}_0, \Point{p}_1 \ldots  \Point{p}_m)$ be an $m$-simplex in $\Reals^{n}$.
 Let $\pi$ be a projection from $\Reals^{n}$ to $Q$, an $(m-1)$-dimensional
 affine subspace of $\Reals^{n}$.
 Assume $\pi$ is chosen so that the points
-$\left\{\pi \Point{p}_0, \pi \Point{p}_1, \ldots , \pi \Point{p}_m\right\}$ are in {\it general position},
+$\left\{\pi \Point{p}_0, \pi \Point{p}_1 \ldots  \pi \Point{p}_m\right\}$ are in {\it general position},
 that is, any $l+1$ of the projected points spans an $l$-dimensional
 affine subspace of $Q$.
 
@@ -46,7 +46,7 @@ The second triangulation is itself the mutual refinement of both.
 \end{plTheorem}
 
 The first 2 statements are obvious.
-If we label the vertices so that $\left\{\pi \Point{p}_1, \ldots , \pi \Point{p}_m\right\}$
+If we label the vertices so that $\left\{\pi \Point{p}_1 \ldots  \pi \Point{p}_m\right\}$
 are on the boundary, and $\pi \Point{p}_0$ is in the interior,
 then the second triangulation results from refining the first
 triangulation {\it pulling} the vertex $\pi \Point{p}_0$
@@ -54,7 +54,7 @@ triangulation {\it pulling} the vertex $\pi \Point{p}_0$
 The faces of the triangulation formed by pulling
 are the images of the $m$ $(m-1)$-simplexes
 of $S$ that contain $\Point{p}_0$, that is, all the $(m-1)$-simplexes in $S$,
-other than $(\Point{p}_1, \ldots , \pi \Point{p}_m)$.
+other than $(\Point{p}_1 \ldots  \pi \Point{p}_m)$.
 
 \begin{plTheorem}{Two simplex projection}{}
 \label{two-simplex-case}
