--- a/shared/functions.tex
+++ b/shared/functions.tex
@@ -218,7 +218,7 @@ with a single argument function:
 \begin{description}
 \item[Catesian product domains]
 Define $f \left( x_0, x_1, \ldots x_{n-1} \right) 
-= f \left( \left[x_0, x_1, \ldots , x_{n-1} \right]\right)$
+= f \left( \left[x_0, x_1 \ldots  x_{n-1} \right]\right)$
 where $\left[x_0, x_1, \ldots x_{n-1} \right] \in
 \Set{X}_0 \times \Set{X}_1 \times \ldots \times \Set{X}_{n-1}$. 
 (Note that domain/support may be a strict subset of full cartesian 
