--- a/tests/chunks.tex
+++ b/tests/chunks.tex
@@ -322,8 +322,8 @@ $\Vector{v} \in \Space{V}$.
 
 \begin{plDefinition}{Linear dependence}{}
 Suppose $\Space{V}$ is a linear space and
-$\Vector{v}_0, \ldots , \Vector{v}_{n-1} \in \Space{V}$.
-If there exists $a_0, \ldots , a_{n-1}$ such that
+$\Vector{v}_0 \ldots  \Vector{v}_{n-1} \in \Space{V}$.
+If there exists $a_0 \ldots  a_{n-1}$ such that
 $\Vector{0} = \sum a_i \Vector{v}_i$ then the $\left\{ \Vector{v}_i \right\}$
 are \textit{linearly dependent}.
 \cite[section~5]{Halmos:1958:Finite}
@@ -332,16 +332,16 @@ Otherwise they are \textit{linearly independent}.
 \end{plDefinition}
 
 \begin{plLemma}{The set of non-zero vectors
- $\Vector{v}_0, \ldots ,\Vector{v}_{n-1}$
+ $\Vector{v}_0 \ldots \Vector{v}_{n-1}$
 is linearly dependent iff some $\Vector{v}_k, \; 1 \leq n-1$, 
 is a linear combination of the precceeding 
 ones~\cite[Section 6]{Halmos:1958:Finite}.}{linearDependenceLemma}
 \textsc{Proof:}
-Assume  $\Vector{v}_0, \ldots ,\Vector{v}_{n-1}$ are linearly dependent.
+Assume  $\Vector{v}_0 \ldots \Vector{v}_{n-1}$ are linearly dependent.
 Consider the smallest $k$ such that 
-$\Vector{v}_0, \ldots ,\Vector{v}_{k}$ is linearly dependent.
+$\Vector{v}_0 \ldots \Vector{v}_{k}$ is linearly dependent.
 By definition,
-there exists non-zero $a_0, \ldots ,a_{k}$ such that
+there exists non-zero $a_0 \ldots a_{k}$ such that
 \begin{equation}
 0 = \sum_0^k a_i \Vector{v}_i
 \end{equation}
@@ -352,16 +352,16 @@ which implies that
 \end{plLemma}
 
 \begin{plTheorem}{The set of non-zero vectors
- $\Vector{v}_0, \ldots ,\Vector{v}_{n-1}$
+ $\Vector{v}_0 \ldots \Vector{v}_{n-1}$
 is linearly dependent iff some $\Vector{v}_k, \; 1 \leq n-1$, 
 is a linear combination of the precceeding 
 ones~\cite[Section 6]{Halmos:1958:Finite}.}{linearDependenceTheorem}
 \textsc{Proof:}
-Assume  $\Vector{v}_0, \ldots ,\Vector{v}_{n-1}$ are linearly dependent.
+Assume  $\Vector{v}_0 \ldots \Vector{v}_{n-1}$ are linearly dependent.
 Consider the smallest $k$ such that 
-$\Vector{v}_0, \ldots ,\Vector{v}_{k}$ is linearly dependent.
+$\Vector{v}_0 \ldots \Vector{v}_{k}$ is linearly dependent.
 By definition,
-there exists non-zero $a_0, \ldots ,a_{k}$ such that
+there exists non-zero $a_0 \ldots a_{k}$ such that
 \begin{equation}
 0 = \sum_0^k a_i \Vector{v}_i
 \end{equation}
@@ -372,16 +372,16 @@ which implies that
 \end{plTheorem}
 
 \begin{plCorollary}{The set of non-zero vectors
- $\Vector{v}_0, \ldots ,\Vector{v}_{n-1}$
+ $\Vector{v}_0 \ldots \Vector{v}_{n-1}$
 is linearly dependent iff some $\Vector{v}_k, \; 1 \leq n-1$, 
 is a linear combination of the precceeding 
 ones~\cite[Section 6]{Halmos:1958:Finite}.}{linearDependenceCorollary}
 \textsc{Proof:}
-Assume  $\Vector{v}_0, \ldots ,\Vector{v}_{n-1}$ are linearly dependent.
+Assume  $\Vector{v}_0 \ldots \Vector{v}_{n-1}$ are linearly dependent.
 Consider the smallest $k$ such that 
-$\Vector{v}_0, \ldots ,\Vector{v}_{k}$ is linearly dependent.
+$\Vector{v}_0 \ldots \Vector{v}_{k}$ is linearly dependent.
 By definition,
-there exists non-zero $a_0, \ldots ,a_{k}$ such that
+there exists non-zero $a_0 \ldots a_{k}$ such that
 \begin{equation}
 0 = \sum_0^k a_i \Vector{v}_i
 \end{equation}
