--- a/tests/math.tex
+++ b/tests/math.tex
@@ -181,8 +181,8 @@ $\Vector{v} \in \Space{V}$.
 
 \begin{plDefinition}{Linear dependence}{LinearDependence}
 Suppose $\Space{V}$ is a linear space and
-$\Vector{v}_0, \ldots , \Vector{v}_{n-1} \in \Space{V}$.
-If there exists $a_0, \ldots , a_{n-1}$ such that
+$\Vector{v}_0 \ldots  \Vector{v}_{n-1} \in \Space{V}$.
+If there exists $a_0 \ldots  a_{n-1}$ such that
 $\Vector{0} = \sum a_i \Vector{v}_i$ then the $\left\{ \Vector{v}_i \right\}$
 are \textit{linearly dependent}.
 \citeAuthorYearTitle[section~5]{Halmos:1958:Finite}
@@ -191,7 +191,7 @@ Otherwise they are \textit{linearly independent}.
 \end{plDefinition}
 
 \begin{plTheorem}{The set of non-zero vectors
- $\Vector{v}_0, \ldots ,\Vector{v}_{n-1}$
+ $\Vector{v}_0 \ldots \Vector{v}_{n-1}$
 is linearly dependent iff some $\Vector{v}_k, \; 1 \leq n-1$, 
 is a linear combination of the preceding 
 ones.}{linearDependenceTheorem}
@@ -199,11 +199,11 @@ ones.}{linearDependenceTheorem}
 See\citeAuthorYearTitle[Section 6]{Halmos:1958:Finite}.
 
 \textsc{Proof:}
-Assume  $\Vector{v}_0, \ldots ,\Vector{v}_{n-1}$ are linearly dependent.
+Assume  $\Vector{v}_0 \ldots \Vector{v}_{n-1}$ are linearly dependent.
 Consider the smallest $k$ such that 
-$\Vector{v}_0, \ldots ,\Vector{v}_{k}$ is linearly dependent.
+$\Vector{v}_0 \ldots \Vector{v}_{k}$ is linearly dependent.
 By definition,
-there exists non-zero $a_0, \ldots ,a_{k}$ such that
+there exists non-zero $a_0 \ldots a_{k}$ such that
 \begin{equation}
 0 = \sum_0^k a_i \Vector{v}_i
 \end{equation}
@@ -223,11 +223,11 @@ Where $\Space{K}$ is any field.
 \begin{itemize}
   \item vectors:
   $\Set{V} = \Space{K}^n = \left\{ \Vector{x}
-  = \left[ x_0, \ldots , x_{n-1} \right] \right\}$,
+  = \left[ x_0 \ldots  x_{n-1} \right] \right\}$,
   tuples of $n$ elements $x_i \in \Space{K}$.
   \item scalars: $\Space{K}$
   \item scalar multiplication:
-  $ a *_{\Space{K}^n} \left[ x_0, \ldots , x_{n-1} \right] =
+  $ a *_{\Space{K}^n} \left[ x_0 \ldots  x_{n-1} \right] =
   \left[ \ldots , a *_{\Space{K}} x_{i} , \ldots \right]$
   \item vector addition:
   $\Vector{x} +_{\Space{K}^n} \Vector{y}
